update buttons to links

--- a/get-help/have-you-tried.html
+++ b/get-help/have-you-tried.html
@@ -215,7 +215,7 @@
                         </div>
                         
                         <div class="form-group">
-                           <button class="button">Yep, I need more help</button>
+                           <a href="what-help.html" class="button">Yep, I need more help</a>
                         </div>
 
                      </form>
