--- a/get-help/upload-service-map.html
+++ b/get-help/upload-service-map.html
@@ -206,7 +206,7 @@
                         </div>
                         
                         <div class="form-group">
-                           <button class="button">Continue</button>
+                           <a href="workshop.html" class="button">Continue</a>
                         </div>
 
                      </form>
