--- a/get-help/which-whole-service.html
+++ b/get-help/which-whole-service.html
@@ -205,7 +205,7 @@
                         <p><a href="../gov-services.html" target="_blank">See the full list of whole services</a></p>
                         
                         <div class="form-group">
-                           <button class="button">Continue</button>
+                           <a href="have-you-tried.html" class="button">Continue</a>
                         </div>
 
                      </form>
