--- a/get-help/what-help.html
+++ b/get-help/what-help.html
@@ -201,7 +201,7 @@
                         </div>
                         
                         <div class="form-group">
-                           <button class="button">Continue</button>
+                           <a href="upload-service-map.html" class="button">Continue</a>
                         </div>
 
                      </form>
