--- a/get-help/workshop.html
+++ b/get-help/workshop.html
@@ -221,7 +221,7 @@
                            </div>
                         
                         <div class="form-group">
-                           <button class="button">Continue</button>
+                            <a href="booked.html" class="button">Continue</a>
                         </div>
 
                      </form>
