--- a/get-help/done.html
+++ b/get-help/done.html
@@ -81,6 +81,7 @@
          <script>var ieVersion = 7;</script><![endif]--><!--[if IE 8]>
          <link rel="stylesheet" media="screen" href="https://assets.publishing.service.gov.uk/collections/application-ie8-969108156fe1de4b2b45874bc4aa810269662de73412d1ba882430ca6ee87d4a.css" />
          <script>var ieVersion = 8;</script><![endif]-->
+         <link rel="stylesheet" media="screen" href="https://govuk-elements.herokuapp.com/public/stylesheets/govuk-elements-styles.css">
       </head>
 
       <body>
@@ -172,44 +173,26 @@
 
             <main id="content" role="main" class="content ">
 
-               <a href="../govuk-service-design/govuk-service-design.html" class="link-back">Back</a>
-
-               <div class="grid-row">
-                  <div class="column-two-thirds">
-                     <div class="pub-c-title
-                        ">
-                        <h1 class="pub-c-title__text pub-c-title__text--long">
-                           Get help to design a government service
-                        </h1>
-                     </div>
-                     <br>
-                     <div class="govuk-govspeak">
-                        <p>Request help to design a service that meets the requirements of Spend Controls, the Government Service Standard, and Technology Code of Practice</p>
-                     </div>
-                  </div>
-               </div>
-
-               <br>
+               <a href="upload-service-map.html" class="link-back">Back</a>
 
                <div class="grid-row">
                   <div class="column-two-thirds">
                      
-                     <form action="have-you-tried.html" method="post" class="form">
+                     <div class="govuk-box-highlight">
+                        <h1 class="heading-xlarge">
+                          Thanks.<br>You've sent us a request.
+                        </h1>
+                        <p class="font-large">
+                          Your reference number is <br>
+                          <strong class="bold">HDJ2123F</strong>
+                        </p>
+                     </div>
 
-                        <div class="form-group">
-                           <fieldset>
-                                 <span class="form-label-bold">Which service area does your work relate to?</span>
-                                 <input class="form-control" id="example-form-label" type="text">
-                           </fieldset>
-                        </div>
-                        <p><a href="../gov-services.html" target="_blank">See the full list of service areas</a></p>
-                        
-                        <div class="form-group">
-                           <a href="have-you-tried.html" class="button">Continue</a>
-                        </div>
-
-                     </form>
-
+                     <h2 class="heading-large">What happens next?</h2>
+                     <ul class="list list-bullet">
+                        <li>We'll review your request</li>
+                        <li>We may contact you to ask for a time for a call to further understand your needs</li>
+                     </ul>
                   </div>
                </div>
             </main>
