--- a/get-help/upload-service-map.html
+++ b/get-help/upload-service-map.html
@@ -192,7 +192,7 @@
                <div class="grid-row">
                   <div class="column-two-thirds">
                      
-                     <form action="workshop.html" method="post" class="form">
+                     <form action="done.html" method="post" class="form">
 
                         <div class="form-group">
                         </div>
@@ -206,7 +206,7 @@
                         </div>
                         
                         <div class="form-group">
-                           <a href="workshop.html" class="button">Continue</a>
+                           <a href="done.html" class="button">Continue</a>
                         </div>
 
                      </form>
