--- a/get-help/what-help.html
+++ b/get-help/what-help.html
@@ -195,7 +195,7 @@
 
                         <div class="form-group">
                            <label class="form-label" for="textarea">
-                           Tell us what you need help with
+                           Tell us what help you need
                            </label>
                            <textarea class="form-control form-control-3-4" name="textarea" id="textarea" rows="5"></textarea>
                         </div>
