--- a/get-help/have-you-tried.html
+++ b/get-help/have-you-tried.html
@@ -180,7 +180,7 @@
                      <div class="pub-c-title
                         ">
                         <h1 class="pub-c-title__text pub-c-title__text--long">
-                           Other work happening in the Import and Export service area
+                           Other work happening in the 'Import and Export' service area
                         </h1>
                      </div>
                   </div>
@@ -195,7 +195,7 @@
                            <fieldset>
 
                               <legend>
-                                 <h3 class="heading-medium">Have you spoken to?</h3>
+                                 <h3 class="heading-medium">Before you request support, have you tried?</h3>
                               </legend>
 
                               <div class="multiple-choice">
@@ -205,10 +205,6 @@
                               <div class="multiple-choice">
                                 <input id="waste-type-2" name="waste-types" type="checkbox" value="waste-mines">
                                 <label for="waste-type-2">Import and export Service Community</label>
-                              </div>
-                              <div class="multiple-choice">
-                                <input id="waste-type-3" name="waste-types" type="checkbox" value="waste-farm-agricultural">
-                                <label for="waste-type-3">Someone else</label>
                               </div>
 
                           </fieldset>
