--- a/govuk-service-design/govuk-service-design.html
+++ b/govuk-service-design/govuk-service-design.html
@@ -9,7 +9,7 @@
 
   <!--[if gt IE 8]><!--><link href="./GOV.UK Service Design_files/screen.css" rel="stylesheet" media="screen"><!--<![endif]-->
   <!--[if lte IE 8]><link href="/stylesheets/screen-old-ie.css" rel="stylesheet" media="screen" /><![endif]-->
-  <link href="./GOV.UK Service Design_files/print.css" rel="stylesheet" media="print">
+  <link href="./GOV.UK Service Design_files/print.css" type="text/css" rel="stylesheet" media="print">
 
   <!--[if IE 8]><link href="/stylesheets/fonts-ie8.css" rel="stylesheet" media="all" /><![endif]-->
   <!--[if gte IE 9]><!--><link href="./GOV.UK Service Design_files/fonts.css" rel="stylesheet" media="all"><!--<![endif]-->
