--- a/govuk-service-design/govuk-service-design.html
+++ b/govuk-service-design/govuk-service-design.html
@@ -7,15 +7,17 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!--[if gt IE 8]><!--><link href="./GOV.UK Service Design_files/screen.css" type="text/css" rel="stylesheet" media="screen"><!--<![endif]-->
+  <!--[if gt IE 8]><!-->
+  <link href="./GOV.UK Service Design_files/screen.css" type="text/html" rel="stylesheet" media="screen"><!--<![endif]-->
   <!--[if lte IE 8]><link href="/stylesheets/screen-old-ie.css" rel="stylesheet" media="screen" /><![endif]-->
-  <link href="./GOV.UK Service Design_files/print.css" type="text/css" rel="stylesheet" media="print">
+  <link href="./GOV.UK Service Design_files/print.css" type="text/html" rel="stylesheet" media="print">
 
   <!--[if IE 8]><link href="/stylesheets/fonts-ie8.css" rel="stylesheet" media="all" /><![endif]-->
-  <!--[if gte IE 9]><!--><link href="./GOV.UK Service Design_files/fonts.css" rel="stylesheet" media="all"><!--<![endif]-->
+  <!--[if gte IE 9]><!-->
+  <link href="./GOV.UK Service Design_files/fonts.css" type="text/html" rel="stylesheet" media="all"><!--<![endif]-->
 
   <script src="./GOV.UK Service Design_files/application.js"></script>
-<link type="text/css" rel="stylesheet" href="chrome-extension://pioclpoplcdbaefihamjohnefbikjilc/content.css"></head>
+<link type="text/html" rel="stylesheet" href="chrome-extension://pioclpoplcdbaefihamjohnefbikjilc/content.css"></head>
 <body data-gr-c-s-loaded="true">
   <a href="https://govuk-verify.cloudapps.digital/#main" class="skip-link">Skip to main content</a>
   <header class="header header--without-border">
