--- a/gov-services.html
+++ b/gov-services.html
@@ -163,7 +163,7 @@
                         <tr>
                            <td>Employ someone</td>
                            <td>Business</td>
-                           <td>Thing 1<br>Thing 2</td>
+                           <td>Pay national insurance<br>Recruit</td>
                            <td><a href="#">Yes</a></td>
                            <td><a href="#">Yes</a></td>
                         </tr>
@@ -184,7 +184,7 @@
                         <tr>
                            <td>Manage energy and carbon</td>
                            <td>Energy</td>
-                           <td>Thing 1<br>Thing 2</td>
+                           <td>Regulate</td>
                            <td><a href="#">No - start one</a></td>
                            <td><a href="#">No - get one</a></td>
                         </tr>
