--- a/govuk-service-design/govuk-service-design.html
+++ b/govuk-service-design/govuk-service-design.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!--[if gt IE 8]><!-->
-  <link href="./GOV.UK Service Design_files/screen.css" type="text/css" rel="stylesheet" media="screen"><!--<![endif]-->
+  <link href="https://govuk-verify.cloudapps.digital/stylesheets/screen.css" type="text/css" rel="stylesheet" media="screen"><!--<![endif]-->
   <!--[if lte IE 8]><link href="/stylesheets/screen-old-ie.css" rel="stylesheet" media="screen" /><![endif]-->
   <link href="./GOV.UK Service Design_files/print.css" type="text/css" rel="stylesheet" media="print">
 
