--- a/govuk-service-design/govuk-service-design.html
+++ b/govuk-service-design/govuk-service-design.html
@@ -10,11 +10,11 @@
   <!--[if gt IE 8]><!-->
   <link href="https://govuk-verify.cloudapps.digital/stylesheets/screen.css" type="text/css" rel="stylesheet" media="screen"><!--<![endif]-->
   <!--[if lte IE 8]><link href="/stylesheets/screen-old-ie.css" rel="stylesheet" media="screen" /><![endif]-->
-  <link href="./GOV.UK Service Design_files/print.css" type="text/css" rel="stylesheet" media="print">
+  <link href="https://govuk-verify.cloudapps.digital/stylesheets/print.css" type="text/css" rel="stylesheet" media="print">
 
   <!--[if IE 8]><link href="/stylesheets/fonts-ie8.css" rel="stylesheet" media="all" /><![endif]-->
   <!--[if gte IE 9]><!-->
-  <link href="./GOV.UK Service Design_files/fonts.css" type="text/css" rel="stylesheet" media="all"><!--<![endif]-->
+  <link href="https://govuk-verify.cloudapps.digital/stylesheets/fonts.css" type="text/css" rel="stylesheet" media="all"><!--<![endif]-->
 
   <script src="./GOV.UK Service Design_files/application.js"></script>
 <link type="text/html" rel="stylesheet" href="chrome-extension://pioclpoplcdbaefihamjohnefbikjilc/content.css"></head>
