--- a/gov-services.html
+++ b/gov-services.html
@@ -156,7 +156,7 @@
                         <tr>
                            <td>Import or export something</td>
                            <td>Business</td>
-                           <td>Apply for a licence<br>Pay tax</td>
+                           <td>Apply for a licence<br>Pay tax<br>Manage casework</td>
                            <td><a href="#">Yes</a></td>
                            <td><a href="#">Yes</a></td>
                         </tr>
@@ -170,14 +170,14 @@
                         <tr>
                            <td>Keep or trade animals and animal products</td>
                            <td>Business</td>
-                           <td>Apply for a licence<br>Logistics</td>
+                           <td>Apply for a licence<br>Logistics<br>Manage casework</td>
                            <td><a href="#">No - start one</a></td>
                            <td><a href="#">No - get one</a></td>
                         </tr>
                         <tr>
                            <td>Set up and run a business</td>
                            <td>Business</td>
-                           <td>Pay tax<br>Registration</td>
+                           <td>Pay tax<br>Registration<br>Manage casework<br>Manage a workflow</td>
                            <td><a href="#">Yes</a></td>
                            <td><a href="#">Yes</a></td>
                         </tr>
