--- a/gov-services.html
+++ b/gov-services.html
@@ -147,7 +147,7 @@
                         <tr>
                            <th>Service name</th>
                            <th>Service category</th>
-                           <th>High level needs</th>
+                           <th>Service taxonomy</th>
                            <th>Service<br>community</th>
                            <th>GOV.UK<br>step by step</th>
                         </tr>
@@ -169,7 +169,7 @@
                         </tr>
                         <tr>
                            <td>Keep or trade animals and animal products</td>
-                           <td>Business</td>
+                           <td>Import / Export</td>
                            <td>Apply for a licence<br>Logistics<br>Manage casework</td>
                            <td><a href="#">No - start one</a></td>
                            <td><a href="#">No - get one</a></td>
